	   proper filename.
	 - Fixed GBRP10LE video color option in ffv1 video.  Previously,
	   it would get reported as pix_fmt -1.
	 - Changed code to OIIO reader of JPG/PNG files to be handled by
	   FFMPEG by default and keep the cache longer.  This should bring
	   the best of both worlds (FFMPEG faster loading with long image
	   caches).  OIIO then would not get used.

v4.1.4   - Removed debugging statements from exrImage.cpp.
	 - Made EXR reader read channels in good sorted order in multipart
	   files so RGBA will appear sorted like that, while XYZ will sort
	   like that.
	 - EXR reader now appends the root name to the channel name when it
	   is not already present.  This helps in multiview EXRs to
	   distinguish right and left pair of images.
	 - EXR reader/saver now keeps Color/RGBAZ in their original locations
	   when reading/saving a multichannel or multipart OpenEXR.  This
	   means Color, Red, Green, Blue, Alpha and Z remain at the top of
	   the list.  This option will not work with previously saved images
	   with the Color at the middle of the list.
	 - EXR reader now reads stereo files properly once again.
	 - Made the Pixel Value pulldown more correctly reflect the options.
	   They are Full (gain, gamma and lut), Lut( gain and lut) and
	   Original (raw pixels).
	 - Made changing images keep the frame number if possible.
	 - Made center an image that is not loaded work properly.
	 - Added FFV1 codec to save movie requester.
	 - Added a switch in Preferences->Loading to select OIIO as the
	   default JPG/PNG loader instead of FFMPEG.  This helps with loading
	   very large JPG/PNG files which cannot be played in real time.

v4.1.3   - Native file requester on Windows does not leave their menus open
	   and obstructing the view.
	 - Previous channel hotkey now works correctly on Color channel when
	   this channel is in the middle of the channel list.
	 - Previous channel hotkey now works correctly on Color channel when